# iris-cli

./: .gitignore  Cargo.toml  README.md  a.json  file.sql  test_sql.sql
.github/workflows/: rust-build-test.yml  rust-format-test-build.yml
iris/: Cargo.toml
iris/src/: lib.rs  main.rs
iris/src/cli/: mod.rs
iris/src/petitions/: client.rs  constants.rs  management_response.rs  mod.rs
iris/src/request/: client.rs  config_request.rs  constants.rs  management_response.rs  mod.rs
iris/src/system_resources/: mod.rs
iris/src/translations_procces/: json_procces.rs  mod.rs  sql_procces.rs  template_procces.rs  text_procces.rs
iris/src/utils/: logger.rs  mod.rs
iris/tests/: mod.rs
iris/tests/mock/: mod.rs
iris/tests/request/: client.rs  management_response.rs  mod.rs
iris/tests/translation_procces/: json_procces.rs  mod.rs  sql_procces.rs  text_procces.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/petitions/: client.rs  management_response.rs  mod.rs
src/petitions/deelp/: actions.rs  constants.rs  mod.rs  model.rs
src/system_resources/: mod.rs  model.rs
src/task_procces/: json_procces.rs  mod.rs  sql_procces.rs  template_procces.rs  text_procces.rs
src/utils/: logger.rs
