[package]
name = "iris-cli"
autor = "OnSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
openssl = "0.10.48"
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
log = "0.4.17"
env_logger = "0.10.0"
color-eyre = { version = "0.6.2", default-features = false }
jsonpath_lib = "0.3.0"
regex = "1.8.4"

